Fixed MIC CSS and added Easy Workout at the end of Thrive project

--- a/projects/thrive.html
+++ b/projects/thrive.html
@@ -255,7 +255,7 @@
         <div class="narrow-container">
                 <h4 class="first-h4">Reception</h4>
                 <p>The app has been very well received with people going out of their way to write positive reviews and write me
-                about how much it helped them or suggesting ideas and content. So far it sold <span class="bold">3.8k units.</span></p>
+                about how much it helped them or suggesting ideas and content. So far it sold <span class="bold">6.8k units.</span></p>
         </div>
 
         <div class="royalSlider">
@@ -311,26 +311,22 @@
         </div>
 
         <div class="narrow-container">
-                <p>Being completely free, this app has <span class="bold">13.9k</span> downloads at the time of writing and 430 ratings with an average rating of <span class="bold">4.8</span></p>
+                <p>Being completely free, this app has <span class="bold">30.9k</span> downloads at the time of writing and 1.4k ratings with an average rating of <span class="bold">4.8</span></p>
         </div>
         <div class="project-image" id="thrive-14"></div>
 
         <div class="narrow-container">
-                <h4 class="first-h4">Emotions Dictionary</h4>
-                <p>The first app I ever published is a pretty simple one from a technical standpoint and something that started as a
-                personal project back in 2016 - an attempt to demystify what emotions are and how they work via simple and concise
-                definitions.</p>
-                <p>If I asked you what frustration, curiosity, or trust are, you would likely know the meaning of the words but might not be able to easily define each emotion. I think having a clear and concise definition for each emotion is a good step towards better
-                emotional intelligence.</p>
-                <p>You can get it <a href="https://apps.apple.com/us/app/emotions-dictionary/id1397348512" target="_blank">here</a>.</p>
+                <h4 class="first-h4">Easy Workout: Core</h4>
+                <p>Another side project I worked on is a fitness app that takes things slow and focuses on building the right habits and helping people who are just getting started to make on their journey.</p>
+                <p>The app is available <a href="https://easy-workout.app" target="_blank">here</a>.</p>
         </div>
 
         <div class="royalSlider">
                 <div class="royalSlider__images">
-                        <img class="rsImg" src="../images/thrive/eq/eq-07.jpg" alt="image desc" />
-                        <img class="rsImg" src="../images/thrive/eq/eq-04.jpg" alt="image desc" />
-                        <img class="rsImg" src="../images/thrive/eq/eq-05.jpg" alt="image desc" />
-                        <img class="rsImg" src="../images/thrive/eq/eq-06.jpg" alt="image desc" />
+                        <img class="rsImg" src="../images/thrive/easy-workout/core-01.jpg"/>
+                        <img class="rsImg" src="../images/thrive/easy-workout/core-02.jpg"/>
+                        <img class="rsImg" src="../images/thrive/easy-workout/core-03.jpg"/>
+                        <img class="rsImg" src="../images/thrive/easy-workout/core-04.jpg"/>
                 </div>
                 <div class="royalSlider__controls">
                         <span class="icon-arrow-left"><img src="../images/arrow-left.svg" width="20"></span>
@@ -339,8 +335,7 @@
         </div>
 
         <div class="narrow-container">
-                <p>Emotions Dictionary wasn’t nearly as popular, but I think it is nevertheless an important milestone and the lessons learned making
-                it served me well in later projects.</p>
+                <p>These are all small side projects I worked on because I thought the idea would be cool to try, but they did help me learn a lot about launching a product, staying on top of user feedback and continuing to improve after launch, the engineering side of things and more. </p>
 
                 <a class="project-nav-container" href="../projects/webfaction.html">
                         <div class="project-nav button-sweep" id="light-background">
