--- a/projects/thrive.html
+++ b/projects/thrive.html
@@ -236,7 +236,7 @@
         <div class="project-image" id="thrive-13"></div>
 
         <div class="narrow-container">
-                <h4 class="first-h4">Staying on top of feedback</h4>
+                <h4 class="first-h4">Staying on top of user feedback</h4>
                 <p>I wanted a good way to not just keep track of all the feedback I receive but also to signal to users that I am listening and open to feedback so I signed up for FeedBear and added it to the website. I was impressed with how well this model worked for companies like Adobe with UserVoice and I wanted something similar.</p>
                 <p>I got some valuable feedback through this channel, but I’d say the biggest benefit was being able to keep users in the loop about the status of a certain feature, ask for more details, etc.</p>
         </div>
