Added new project and tweaked home page

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <img src="images/mic.jpg">
             <div class="text">
                 <h1 class="number">Key Result: 1% → 9% Conversion</h1>
-                <h1>Building MIC's digital experience from scratch</h1>
+                <h1>Building MIC's web experience from scratch</h1>
                 <a href="projects/mic.php">
-                    <div class="view-project button-sweep" id="webfaction-view-project">
+                    <div class="view-project button-sweep">
                         <i class="fas fa-lock" id="lock"></i>
                         <span>View Project</span>
                     </div>
@@ -74,9 +74,25 @@
                 <a href="images/thrive/thrive-13.jpg" target="_blank"><img class="featured" src="images/apple.svg"></a>
                 <h1>Launching Thrive, my own iOS app</h1>
                 <a href="projects/thrive.html">
-                    <div class="view-project button-sweep" id="thrive-view-project">
+                    <div class="view-project button-sweep" id="white-view-project">
                         <span>View Project</span>
                         <i class="fas fa-arrow-right"></i>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div id="shpock-block">
+        <div class="container">
+            <img id="shpock-main" src="images/shpock.jpg">
+            <div class="text">
+                <h1 class="number">Key Result: +33% team OKR</h1>
+                <h1>Optimising the experience of selling on Shpock</h1>
+                <a href="projects/shpock.php">
+                    <div class="view-project button-sweep">
+                        <i class="fas fa-lock" id="lock"></i>
+                        <span>View Project</span>
                     </div>
                 </a>
             </div>
@@ -86,10 +102,9 @@
     <div id="webfaction-block">
         <div class="container">
             <div class="text">
-                <!-- <h1 class="number">Key Result: </h1> -->
                 <h1>Helping Webfaction attract a less technical audience</h1>
                 <a href="projects/webfaction.html">
-                    <div class="view-project button-sweep" id="webfaction-view-project">
+                    <div class="view-project button-sweep" id="white-view-project">
                         <span>View Project</span>
                         <i class="fas fa-arrow-right"></i>
                     </div>
@@ -104,6 +119,7 @@
         <a href="projects/glofox.html"><img src="images/mobile-glofox.jpg"></a>
         <a href="projects/mic.php"><img src="images/mobile-mic.jpg"></a>
         <a href="projects/thrive.html"><img id="mobile-thrive-image" src="images/mobile-thrive.jpg"></a>
+        <a href="projects/shpock.php"><img src="images/mobile-shpock.jpg"></a>
         <a href="projects/webfaction.html"><img src="images/mobile-webfaction.jpg"></a>
     </div>
 
@@ -112,21 +128,21 @@
         <p>Thanks for stopping by <img id="emoji" src="images/emoji.jpg"></img></p>
         <p class="small">Find more of my work below</p>
         <div id="links">
-            <a class="button-sweep" id="hyperion" href="https://www.studio-hyperion.uk" target="_blank">
-                <img src="images/hyperion.svg">
-                <p>Hyperion</p>
-            </a>
-            <a class="button-sweep" id="github" href="https://github.com/CristianMoisei" target="_blank">
-                <img src="images/github.svg">
-                <p>GitHub</p>
+            <a class="button-sweep" id="ph" href="https://www.producthunt.com/@cristianmoisei/made" target="_blank">
+                <img src="images/ph.svg">
+                <p>Product Hunt</p>
             </a>
             <a class="button-sweep" id="behance" href="https://www.behance.net/cristianmoisei" target="_blank">
                 <img src="images/behance.svg">
                 <p>Behance</p>
             </a>
-            <a class="button-sweep" id="ph" href="https://www.producthunt.com/@cristianmoisei/made" target="_blank">
-                <img src="images/ph.svg">
-                <p>Product Hunt</p>
+            <a class="button-sweep" id="github" href="https://github.com/CristianMoisei" target="_blank">
+                <img src="images/github.svg">
+                <p>GitHub</p>
+            </a>
+            <a class="button-sweep" id="hyperion" href="https://www.studio-hyperion.uk" target="_blank">
+                <img src="images/hyperion.svg">
+                <p>Hyperion</p>
             </a>
         </div>
     </div>
