--- a/projects/glofox.html
+++ b/projects/glofox.html
@@ -33,7 +33,7 @@
                 <a class="back-button" href="../index.html"><img src="../images/arrow-black.png" height="20"></a>
                 <h1>Glofox</h1>
 
-                <p>Glofox is a relatively new (est. 2013) provider of business management software for the fitness industry and, being created by ex-athletes and studio owners who understand the pains, they have ambitions to create a solution that hits the nail in the head and frees fitness professionals to focus on what they do best. They understand the importance of a great user experience and have hired me to take charge of their efforts.</p>
+                <p>Glofox is a company founded in 2013 that builds business management software for the fitness industry. Being created by ex-athletes and studio owners who understand the pains, they have ambitions to create a platform that frees fitness professionals to focus on what they do best rather than the tedious admin work that comes with running a small business. They understand the importance of a great user experience and have hired me to take charge of their efforts.</p>
                 <div class="quote-block">
                         <img id="glyph" src="../images/glofox/quote.svg">
                         <div id="rest-of-quote">
