--- a/projects/thrive.html
+++ b/projects/thrive.html
@@ -337,10 +337,10 @@
         <div class="narrow-container">
                 <p>These are all small side projects I worked on because I thought the idea would be cool to try, but they did help me learn a lot about launching a product, staying on top of user feedback and continuing to improve after launch, the engineering side of things and more. </p>
 
-                <a class="project-nav-container" href="../projects/webfaction.html">
+                <a class="project-nav-container" href="../projects/shpock.php">
                         <div class="project-nav button-sweep" id="light-background">
                                 <p class="small bold">Next Project</p>
-                                <p class="large">Webfaction</p>
+                                <p class="large">Shpock</p>
                                 <i class="fas fa-arrow-right"></i>
                         </div>
                 </a>
