--- a/projects/webfaction.html
+++ b/projects/webfaction.html
@@ -34,7 +34,7 @@
                 <a class="back-button" href="../index.html"><img src="../images/arrow-black.png" height="20"></a>
                 <h1>Webfaction</h1>
 
-                <p>Webfaction is a managed hosting provider aimed at developers with a great offering, great pricing, awesome support and one of the most awkward and difficult to use interfaces I have ever seen. I worked with them while running Hyperion in order to, on one hand, make the product more accessible to less technical users and capture a segment of that market but also simplify the interface for existing users who were equally frustrated with how difficult to use it was.</p>
+                <p>Webfaction is a managed hosting provider aimed at developers with a great offering, great pricing, awesome support and one of the most awkward and difficult to use interfaces I have ever seen. I worked with them while running Hyperion in order to make the product more accessible to less technical users and capture more of this market segment, but also simplify the interface for existing users who were equally frustrated with how difficult to use it was.</p>
                 <p>My responsibilities included managing the project, conducting user research, interface and experience design and development oversight.</p>
                 <p>After talking to the company's founders, running a series of user interviews and looking at the analytics and support tickets, we found that a significant number of users find the interface confusing and have to contact support to understand how to achieve basic goals.</p>
 
@@ -116,7 +116,7 @@
         </div>
 
         <div class="narrow-container">
-                <p>After several iterations, my colleague and I created an HTML/CSS + sliced up images prototype to do more testing. We opted for this solution because the interface is quite complex and tools like InVision would not have felt as realistic, and we decided it would be best to get as close to the real thing as possible for this stage.</p>
+                <p>After several iterations, my colleague and I created a prototype to do more user testing. We opted for this solution because the interface is quite complex and tools like InVision would not have felt as realistic, and we decided it would be best to get as close to the real thing as possible for this stage.</p>
                 
                 <p>The interface was well received and once I ironed out the last remaining details in the design, my colleague and I started developing it.</p>
         </div>
