Added a close button to auth

--- a/projects/thrive.html
+++ b/projects/thrive.html
@@ -317,7 +317,7 @@
 
         <div class="narrow-container">
                 <h4 class="first-h4">Easy Workout: Core</h4>
-                <p>Another side project I worked on is a fitness app that takes things slow and focuses on building the right habits and helping people who are just getting started to make on their journey.</p>
+                <p>A side project I worked on during the lockdown is a fitness app that takes things slow and focuses on building the right habits and helping people who are just getting started to make on their journey.</p>
                 <p>The app is available <a href="https://easy-workout.app" target="_blank">here</a>.</p>
         </div>
 
