Updated Open Graph meta

--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
 <head>
     <title>Cristian Moisei - Product Designer in London</title>
     <meta charset="utf-8">
-    <meta name="description" content="This website contains case studies of my work, my CV and info about my process.">
+    <meta name="description" content="This is my portfolio website with case studies of my work, my CV and info about my process.">
     <meta name="keywords" content="ux,ui,product,designer,london,cristian,moisei">
     <meta name="author" content="Cristian Moisei">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta property='og:title' content="Cristian Moisei - Product Designer in London"/>
+    <meta property='og:image' content='https://meet-cristian.com/images/open-graph-image.jpg'/>
+    <meta property='og:description' content='This is my portfolio website with case studies of my work, my CV and info about my process.'/>
+
     <link rel="stylesheet" href="styles/main/main.css">
     <link rel="stylesheet" href="styles/import-fonts.css">
     <link rel="stylesheet" href="styles/hover-effects/hover-effects.css">
@@ -16,6 +21,7 @@
     <link rel="stylesheet" href="styles/modal.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/solid.css" integrity="sha384-TbilV5Lbhlwdyc4RuIV/JhD8NR+BfMrvz4BL5QFa2we1hQu6wvREr3v6XSRfCTRp" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/fontawesome.css" integrity="sha384-ozJwkrqb90Oa3ZNb+yKFW2lToAWYdTiF1vt8JiH5ptTGHTGcN7qdoR1F95e0kYyG" crossorigin="anonymous">
+
     <script src="scripts/show-contact-details.js"></script>
     <script src="scripts/scroll-to.js"></script>
     <script src="https://unpkg.com/smoothscroll-polyfill/dist/smoothscroll.min.js"></script>
